Bug 1667768 - Don't DIAGNOSTIC_ASSERT if unable to open a Windows printer, just warn (debug only) and bail out. r=bobowen

Differential Revision: https://phabricator.services.mozilla.com/D91579